syntax = "proto3";

package common;
option go_package = "proto/common";

import "google/protobuf/any.proto";

message BaseResp {
  int32 code = 1;
  string msg = 2;
}

message TestReq{
  uint32 i = 1;
  string data = 2;
}

message TestResp{
  uint32 i = 1;
  string data = 2;
}


